[gd_scene load_steps=5 format=3 uid="uid://cl4lc4gommka2"]

[ext_resource type="Texture2D" uid="uid://cvrnueeu1125p" path="res://Textures/up.png" id="1_p0pu7"]
[ext_resource type="Script" path="res://Cutscene Nodes/PositionControl.gd" id="1_tmmuh"]
[ext_resource type="Texture2D" uid="uid://bl6o0peaql6mg" path="res://Textures/delete.png" id="2_8vk1t"]
[ext_resource type="Texture2D" uid="uid://bsha8d05b344q" path="res://Textures/down.png" id="3_y7qr7"]

[node name="Position Control" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 30.0
offset_bottom = 32.0
grow_vertical = 2
script = ExtResource("1_tmmuh")

[node name="Up Button" type="Button" parent="."]
layout_mode = 2
offset_left = 3.0
offset_right = 27.0
offset_bottom = 16.0
focus_mode = 0
icon = ExtResource("1_p0pu7")

[node name="Delete Button" type="Button" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = 20.0
offset_right = 27.0
offset_bottom = 44.0
focus_mode = 0
icon = ExtResource("2_8vk1t")

[node name="Down Button" type="Button" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = 48.0
offset_right = 27.0
offset_bottom = 64.0
focus_mode = 0
icon = ExtResource("3_y7qr7")
icon_alignment = 1

[connection signal="button_up" from="Up Button" to="." method="_on_up_button_button_up"]
[connection signal="button_up" from="Delete Button" to="." method="_on_delete_button_button_up"]
[connection signal="button_up" from="Down Button" to="." method="_on_down_button_button_up"]
